--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com"> <!-- Montserrat font importing from google fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!-- Montserrat font importing from google fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet"> 
+    <link rel="shortcut icon" href="./logos/assets/the121Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Hire Video Editors | 121Creators</title>
 </head>
 <body>
-    <div class="top-bar">
-        <div class="logo">
-            <span>--LOGO HERE--</span>
-            <span class="title">121 Creators /</span>
-            <span class="des">A CREATIVE TEAM</span>
-        </div>
-        <div class="quick-links">
-            <ul class="bar-links">
-                <li>About</li>
-                <li>Resume</li>
-                <li>Our Works</li>
-                <li>Contact</li>
-            </ul>
-        </div>
-    </div>
+
+    <header>
+            <div class="logo">
+                <a href="./index.html">
+                    <span class="title">121 Creators</span>
+                    <span class="subtitle">A creative Team</span>
+                </a>
+            </div>
+            <nav class="quick-links">
+                <ul class="bar-links">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Resume</a></li>
+                    <li><a href="#">Our Works</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+    </header>
+    <main> 
+    </main>
 </body>
 </html>
