--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./logos/assets/the121Favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/Logos/the121Favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Hire Video Editors | 121Creators</title>
 </head>
 <body>
-
-    <header>
+    <!-- navigation bar HTML code -->
+    <header> 
             <div class="logo">
                 <a href="./index.html">
+                    <img src="./assets/Logos/the121creatorsLogoV1(Black).png" alt="the121creatorsLogo">
                     <span class="title">121 Creators</span>
                     <span class="subtitle">A creative Team</span>
                 </a>
@@ -26,7 +27,11 @@
                 </ul>
             </nav>
     </header>
+    <!-- navigation bar HTML code -->
+    <!-- Main content for the website -->
     <main> 
+
     </main>
+    <!-- Main content for the website -->
 </body>
 </html>
