Added contents to the blank HTML... (Might change it later)
- About text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
     <!-- navigation bar HTML code -->
     <!-- Main content for the website -->
     <main> 
-
+        <div class="about-section">
+            <div class="tagline">
+                <span>we <em>are </em></span>
+                <span> the 121</span> 
+                <span>Creators</span>
+                <p>If you've ever struggled with the idea of presenting your brand online, you are not alone! Such things generally require an extra hand, which we have the expertise to provide. <br><br>
+                    The "121 Creators" is an Editing Group of visionary creators and editors who edit with passion.</p>
+            </div>
+        </div>
     </main>
     <!-- Main content for the website -->
 </body>
