Added cartoonist about the team...

--- a/index.html
+++ b/index.html
@@ -89,33 +89,33 @@
                 <span>We are ...</span>
             </div>
             <div class="team">
-                <div class="lakshay">
-                    <img src="./assets/TheTeam/LakshaySir!.jpg" alt="Lakshay (FOUNDER & VIDEO EDITOR)" width="259px" height="285.5px">
-                    <span>Founder & Video Editor</span>
-                    <p class="wide-element">The framesetter behind the ideation of forming a Team, Lakshay is a name among the millions who try their hand at creative stuff as in Graphic Designing, but never stopped expanding.</p>
+                <div class="team-containers">
+                    <img src="https://assets.website-files.com/5e51c674258ffe10d286d30a/5e535800e35d38d2f1674cab_peep-54.png" alt="Web Designer @ 121 Creators">
+                    <span class="designation" > Web Designer </span>
+                    <span class="about" >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel minus sapiente aspernatur eveniet earum velit id? Totam consequatur voluptatum, cumque facilis ad hic alias? Non, vitae impedit. Illo, laudantium sequi.</span>
                 </div>
-                <div class="shreya">
-                    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NXx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="" width="259px" height="285.5px">
-                    <span>Graphic Designer</span>
-                    <p class="wide-element">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi optio dolores perspiciatis doloribus voluptate officia dolor, velit placeat iste ipsum minima quaerat recusandae, delectus iusto beatae officiis quibusdam aspernatur enim.</p>
+
+                <div class="team-containers">
+                    <img src="https://assets.website-files.com/5e51c674258ffe10d286d30a/5e53525c9588e0829a7b6d29_peep-18.png" alt="Founder & Video Editor @ 121 Creators">
+                    <span class="designation" >Founder & Video Editor</span>
+                    <span class="about" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias repellendus doloremque, reiciendis, explicabo tempore iure quibusdam ducimus inventore quo fugit eaque commodi officia. Porro eligendi molestias soluta perspiciatis iure eius!</span>
+
                 </div>
-                <div class="lakshay">
-                    <img src="./assets/TheTeam/LakshaySir!.jpg" alt="Lakshay (FOUNDER & VIDEO EDITOR)" width="259px" height="285.5px">
-                    <span>Founder & Video Editor</span>
-                    <p class="wide-element">The framesetter behind the ideation of forming a Team, Lakshay is a name among the millions who try their hand at creative stuff as in Graphic Designing, but never stopped expanding.</p>
-                </div>
-                <div class="lakshay">
-                    <img src="./assets/TheTeam/LakshaySir!.jpg" alt="Lakshay (FOUNDER & VIDEO EDITOR)" width="259px" height="285.5px">
-                    <span>Founder & Video Editor</span>
-                    <p class="wide-element">The framesetter behind the ideation of forming a Team, Lakshay is a name among the millions who try their hand at creative stuff as in Graphic Designing, but never stopped expanding.</p>
+                <div class="team-containers">
+                    <img src="https://assets.website-files.com/5e51c674258ffe10d286d30a/5e53525c9588e0829a7b6d29_peep-18.png" alt="Founder & Video Editor @ 121 Creators">
+                    <span class="designation" >Founder & Video Editor</span>
+                    <span class="about" >Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias repellendus doloremque, reiciendis, explicabo tempore iure quibusdam ducimus inventore quo fugit eaque commodi officia. Porro eligendi molestias soluta perspiciatis iure eius!</span>
+
                 </div>
             </div>
+            
+            
     </main>
     <div class="footer">
         <div class="contact">
             <div class="call">
                 <a href="#" class="a-tag-reset"><ion-icon name="call"></ion-icon></a>
-                <span class="hover-text">+91 8264 777 975</span>
+                <span class="hover-text">+91-8264-777-975</span>
             </div>
             <div class="mail">
                 <a href="#" class="a-tag-reset"><ion-icon name="mail"></ion-icon></a>
